# Reader

./: .gitignore  AGENTS.md  CLAUDE.md  Overview.md  README.md  VISION.md  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.archive/: PRD.md  START-RALPH-LOOP.md  abcabc.txt  context-strip-mode-postmortem.md  desktop-app.txt  planning.txt  preprocessing.txt  unified-discussion.txt
.github/workflows/: ci.yml
docs/: maintenance-charter.md  memorization-project-companion.md  operational-runbook.md  refactor-phased-plan.md  refactor-pr-draft.md  refactor-pr-readiness-plan.md  refactor-session-handoff-2026-02-12.md
docs/.archive/: claude-discussion-comprehension.txt
docs/brainstorming/: comprehension-companion-v1-implementation-plan.md  comprehension-companion-v1-spec.md
docs/migration/: desktop-baseline-runbook.md  tauri-rust-migration-board.md  tokenizer-fixture-format-v1.md
docs/plans/: 2026-02-24-codebase-cleanup-design.md  2026-02-24-codebase-cleanup-plan.md  2026-02-25-epub-reader-design.md  (+5 more)
electron/: main.ts  preload.cjs  preload.ts  tsconfig.json
public/: bookmarklet.js  seed.html
scripts/: extract_statistical_rethinking.js  generate-tokenizer-fixtures.ts
scripts/prepare-corpus/: analyze_readability.py  generate_medium.py  prepare_corpus.py  pyproject.toml  requirements.txt  score_medium.py
shared/: electron-contract.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+135 files in other folders)
