[package]
name = "reader-tauri"
version = "0.1.0"
description = "Reader desktop shell powered by Tauri"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
keyring = "3"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
url = "2"
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
