[project]
name = "prepare-corpus"
version = "0.1.0"
description = "Prepare Wikipedia GA/FA corpus for Reader's Random Drill mode"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "spacy>=3.5",
    "tqdm>=4.60",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
